Update ContactController.java